@startuml Patron_Observer_Postulacion

interface PostulacionObserver {
    +actualizar(String estado, String detalle)
}

class EstudianteNotificacion {
    +actualizar(String estado, String detalle)
}

class CoordinadorNotificacion {
    +actualizar(String estado, String detalle)
}

class PostulacionContext {
    - List<PostulacionObserver> observers
    - String estado
    - String idPostulacion
    + adjuntar(PostulacionObserver observer)
    + desadjuntar(PostulacionObserver observer)
    + cambiarEstado(String nuevoEstado, String detalle)
    - notificarObservers()
}

PostulacionObserver <|.. EstudianteNotificacion
PostulacionObserver <|.. CoordinadorNotificacion
PostulacionContext --> PostulacionObserver : maneja

@enduml